--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -84,3 +84,9 @@ div.article-content
 
 .selected
   background-color #E3E2FF
+  
+.octicon-issue-closed
+  color #bd2c00
+  
+.octicon-issue-opened
+  color #6cc644
