--- a/public/views/templates/article-change-preview-template.jade
+++ b/public/views/templates/article-change-preview-template.jade
@@ -1,11 +1,11 @@
 script#changes-template(type="x-tmpl-mustache")
   | {{#changes}}
-  .icon 
-    img(src="{{icon}}")
-  .score {{score}}
-  .description 
-    a(href="{{url}}") {{description}}
-  .avatar 
-    img(src="{{avatar}}")
-  .date {{date}}
+  .change-preview
+    .octicon(class="{{octicon}}")
+    .score {{score}}
+    .description 
+      a(href="{{url}}") {{description}}
+    .avatar 
+      img(src="{{avatar}}")
+    .date {{date}}
   | {{/changes}}
