Add css to the changes preview of an article

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -29,3 +29,18 @@
   
 .change-preview
   border-bottom 1px solid #eaeaea
+  padding-top 5px
+  padding-bottom 5px
+  
+.change-preview:first-of-type
+  margin-top 16px  
+  
+.change-description
+  padding-left 10px
+  font-size 19px
+  
+.change-score
+  padding-left 7px
+
+.changes-title
+  padding-bottom 10px
