--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -90,3 +90,12 @@ div.article-content
   
 .octicon-issue-opened
   color #6cc644
+  
+.left
+  float left
+  
+.right
+  float right
+  
+.clear
+  clear both
