--- a/public/views/templates/viewable-article.jade
+++ b/public/views/templates/viewable-article.jade
@@ -2,4 +2,4 @@ include rendered-article
 .rectangular-frame
   h1 Information
 #changes-frame.rectangular-frame
-  h1 Proposed changes
+  h1.changes-title Proposed changes
