Add changes ajax calls

--- a/public/views/templates/article-change-preview-template.jade
+++ b/public/views/templates/article-change-preview-template.jade
@@ -7,6 +7,6 @@ script#changes-template(type="x-tmpl-mustache")
       .change-description.left
         a(href="{{url}}") {{description}}
     .change-avatar.right
-      img(src="{{avatar}}")
+      img(src="{{avatar}}" title="{{author}}")
     .change-date.clear {{date}}
   | {{/changes}}
