You can almost view a change

--- a/public/views/partials/article.jade
+++ b/public/views/partials/article.jade
@@ -1,4 +1,4 @@
-.partial.article-partial(style='display:none')
+.partial.article(style='display:none')
   .main-left
     input.score-arrow.up-score#up-score-on(type="image" src="/images/up-score-on.png" style="display:none")
     input.score-arrow.up-score#up-score-off(type="image" src="/images/up-score-off.png")
