--- a/public/views/partials/article.jade
+++ b/public/views/partials/article.jade
@@ -1,11 +1,6 @@
 .partial.article(style='display:none')
   .main-left
-    input.score-arrow.up-score#up-score-on(type="image" src="/images/up-score-on.png" style="display:none")
-    input.score-arrow.up-score#up-score-off(type="image" src="/images/up-score-off.png")
-    #article-score
-      | 3
-    input.score-arrow.down-score#down-score-on(type="image" src="/images/down-score-on.png" style="display:none")
-    input.score-arrow.down-score#down-score-off(type="image" src="/images/down-score-off.png")
+    include ../templates/score
 
   .main-center
     .crumb
