Add diff to the change view

--- a/public/public/stylesheets/layout.styl
+++ b/public/public/stylesheets/layout.styl
@@ -99,3 +99,14 @@ div.article-content
   
 .clear
   clear both
+  
+.diff
+  border: solid rgb(138, 138, 138);
+  border-width: 1px;
+  border-radius: 5px;
+  
+.diff.removed
+  background-color: rgb(255, 132, 132);
+  
+.diff.added
+  background-color: #B0FFA2;
