Add transitions to change gui

--- a/public/views/partials/change.jade
+++ b/public/views/partials/change.jade
@@ -3,9 +3,9 @@
     include ../templates/up-score
   .main-center
     .crumb
-      a#article-crumb Article 
+      a.article-crumb Article 
       | > 
-      a#change-crumb Change
+      a.change-crumb Change
     .title
     .description
     .state.octicon.left
