--- a/public/views/change.jade
+++ b/public/views/change.jade
@@ -1,8 +1,15 @@
-extends base-article
-
-prepend scripts
-  script.
-    subGuiName = 'ChangeGui'
-
-block main
-  include partials/change
+.partial.change(style='display:none')
+  .main-left
+    include templates/up-score
+  .main-center
+    .crumb
+      a.article-crumb Article 
+      | > 
+      a.change-crumb Change
+    .title
+    .description
+    .state.octicon.left
+    .score
+    .date
+    button.accept Accept change
+    include templates/rendered-article
