Fix transition errors

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -9,7 +9,7 @@
 #main button
   margin-left 10px
   
-#changes-frame
+.changes.rectangular-frame
   clear both
   
 .rectangular-frame
@@ -27,20 +27,20 @@
   font-size 28px
   text-align center
   
-.change-preview
+.changes .list .preview
   border-bottom 1px solid #eaeaea
   padding-top 5px
   padding-bottom 5px
   
-.change-preview:first-of-type
+.changes .list preview:first-of-type
   margin-top 16px  
   
-.change-description
+.changes .list description
   padding-left 10px
   font-size 19px
   
-.change-score
+.changes .list score
   padding-left 7px
 
-.changes-title
+.changes .list title
   padding-bottom 10px
