--- a/public/views/templates/viewable-article.jade
+++ b/public/views/templates/viewable-article.jade
@@ -1,5 +1,7 @@
 include rendered-article
 .rectangular-frame
   h1 Information
-#changes-frame.rectangular-frame
-  h1.changes-title Proposed changes
+.changes.rectangular-frame
+  h1.title Proposed changes
+  .list
+  include article-change-preview-template
