Better styling for dependencies view

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -44,3 +44,12 @@
 
 .changes .list title
   padding-bottom 10px
+  
+.dependencies.partial .octicon-star
+  color rgb(255, 235, 122)
+  text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
+  font-size 26px
+
+
+a.deps
+  font-family monospace
