Add templating to the dependencies of an article

--- a/public/views/dependencies.jade
+++ b/public/views/dependencies.jade
@@ -5,11 +5,5 @@
       a.article.crumb Back to Article 
     .rectangular-frame 
       h1 Dependencies
-      ul
-        li
-          span.mega-octicon.octicon-star
-          | 3
-          span.mega-octicon.octicon-arrow-up
-          img.avatar(src="/images/avatar.png")
-          a.deps (deps)
-          span.title article title
+      ul.dependency.list
+    include templates/dependencies
