--- a/public/views/templates/dependencies.jade
+++ b/public/views/templates/dependencies.jade
@@ -1,11 +1,12 @@
-#dependencies
-  h1 Dependencies
-  ul
-    script#dependencies-template(type="x-tmpl-mustache") 
-      {{#deps}}
-      li.dependency
-        input.dependencyId(type="hidden" value="{{id}}")
-        img.avatar(src="/images/avatar.png")
-        a.title(href="{{url}}") {{title}}
-        i  by Him 
-      {{/deps}}
+script.template(type="x-tmpl-mustache")
+  li
+    | {{#dependencies}}
+    .dependency.template
+      input.dependency-id(type='hidden' val='{{dependencyId}}')
+      span.mega-octicon.octicon-star
+      | {{score}}
+      span.mega-octicon.octicon-arrow-up
+      img.avatar(src="/images/avatar.png")
+      a.dependencies(href='{{dependencyUrl}}')  (deps)
+      a.article(href='{{articleUrl}}')  {{title}}
+    | {{/dependencies}}
