Add left margin to views and make crumbs look all the same

--- a/public/views/change.jade
+++ b/public/views/change.jade
@@ -3,9 +3,7 @@
     include templates/up-score
   .main-center
     .crumb
-      a.article-crumb Article 
-      | > 
-      a.change-crumb Change
+      a.article-crumb Back to Article 
     .title
     .description
     .state.octicon.left
