--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -7,3 +7,12 @@
       a#article-crumb Article
     include templates/viewable-article
     a#editArticle(href= edit_url) Edit
+    .rectangular-frame
+      h1 Information
+    .changes.rectangular-frame
+      h1.title Proposed changes
+      .list
+      include templates/article-change-preview-template
+    .rectangular-frame
+      h1
+        a.dependencies Dependencies
