--- a/public/views/dependencies.jade
+++ b/public/views/dependencies.jade
@@ -1,5 +1,5 @@
 .partial.dependencies(style='display:none')
-  .main-left    
+  .main-left &nbsp;
   .main-center
     .crumb
       a.article.crumb Back to Article 
