--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -1,9 +1,6 @@
 .partial.edit-article-partial(style='display:none')
-  .main-left
-
+  .main-left &nbsp;
   .main-center
     .crumb
-      a#article-crumb Article 
-      | > 
-      a#edit-article-crumb Edit article 
+      a#article-crumb Back to Article 
     include templates/previewable-article
