Halfway commit of dependencies user scoring

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -45,10 +45,16 @@
 .changes .list title
   padding-bottom 10px
   
+.dependencies.partial .mega-octicon.empty
+  color white
+  
 .dependencies.partial .octicon-star
   color rgb(255, 235, 122)
   text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
   font-size 26px
+  
+.dependencies.partial .octicon-arrow-up
+  text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
 
 a.deps
   font-family monospace
