Add index view to the transitions

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -1,4 +1,22 @@
-﻿
+﻿.partial.index .article-thumb
+  height 80px
+  width 600px
+  border-radius 3px
+  border solid 1px #cfcfcf
+  margin 5px
+
+.partial.index .title
+  margin-left 10px
+  margin-top 5px
+  font-size 2em
+  font-weight bold
+  display inline-block
+
+.partial.index .content
+  margin-left 20px
+  margin-top 3px
+
+
 #dependency-frame
   margin-left 20px
   
@@ -58,4 +76,3 @@
 
 a.deps
   font-family monospace
-  
