--- a/public/public/stylesheets/index.styl
+++ b/public/public/stylesheets/index.styl
@@ -1,17 +1,1 @@
-﻿.article-thumb
-  height 80px
-  width 600px
-  border-radius 3px
-  border solid 1px #cfcfcf
-  margin 5px
-
-.title
-  margin-left 10px
-  margin-top 5px
-  font-size 2em
-  font-weight bold
-  display inline-block
-
-.content
-  margin-left 20px
-  margin-top 3px
+﻿
