--- a/public/views/single-page-app.jade
+++ b/public/views/single-page-app.jade
@@ -4,6 +4,7 @@ append styles
   link(rel='stylesheet', href='/stylesheets/article.css')
 
 block main
+  include index
   include article
   include edit_article
   include change
