--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -4,6 +4,6 @@
     .article-thumbs
     include templates/article-thumb
     #buttons
-      button#create Create article
+      button.create Create article
   
 
