--- a/public/views/single-page-app.jade
+++ b/public/views/single-page-app.jade
@@ -6,6 +6,7 @@ append styles
 block main
   include index
   include article
+  include create_article
   include edit_article
   include change
   include dependencies
