Add selectize to dependencies view

--- a/public/views/dependencies.jade
+++ b/public/views/dependencies.jade
@@ -5,5 +5,7 @@
       a.article.crumb Back to Article 
     .rectangular-frame 
       h1 Dependencies
+      select.dependency(type="text" placeholder="Type words included in the title of the article you want to depend on...")
+      button.add-dependency Add
       ul.dependency.list
     include templates/dependencies
