--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -74,5 +74,9 @@
 .dependencies.partial .octicon-arrow-up
   text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
 
+.dependencies.partial .removeDependency
+  width 20px
+  height 20px
+
 a.deps
   font-family monospace
