--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -1,4 +1,4 @@
-.partial.edit-article-partial(style='display:none')
+.partial.edit-article(style='display:none')
   .main-left &nbsp;
   .main-center
     .crumb
