Edit article view now works

--- a/public/views/edit_article.jade
+++ b/public/views/edit_article.jade
@@ -2,5 +2,6 @@
   .main-left &nbsp;
   .main-center
     .crumb
-      a#article-crumb Back to Article 
+      a.article-crumb Back to Article 
     include templates/previewable-article
+    button.save Save
