Confirm on dependency removal, better css for dependencies view

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -66,6 +66,10 @@
 .dependencies.partial .mega-octicon.empty
   color white
   
+.dependencies.partial .main-center .rectangular-frame
+  width 800px
+  
+  
 .dependencies.partial .octicon-star
   color rgb(255, 235, 122)
   text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
@@ -77,6 +81,12 @@
 .dependencies.partial .removeDependency
   width 20px
   height 20px
+  
+.dependencies.partial .dependency a.article
+  font-size 19px
+  
+.dependencies.partial .dependency a.dependencies
+  font-family monospace
 
 a.deps
   font-family monospace
