Render content in index articles as html

--- a/public/views/templates/article-thumb.jade
+++ b/public/views/templates/article-thumb.jade
@@ -2,5 +2,5 @@ script#article-thumb-template(type="x-tmpl-mustache")
   | {{#articles}}
   .article-thumb
     a.title(href="{{url}}") {{title}}
-    .content {{content}}
+    .content {{{content}}}
   | {{/articles}}
