Show dependencies in article view

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -63,29 +63,28 @@
 .changes .list title
   padding-bottom 10px
   
-.dependencies.partial .mega-octicon.empty
-  color white
-  
 .dependencies.partial .main-center .rectangular-frame
   width 800px
   
+.mega-octicon.empty
+  color white
   
-.dependencies.partial .octicon-star
+.octicon-star
   color rgb(255, 235, 122)
   text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
   font-size 26px
   
-.dependencies.partial .octicon-arrow-up
+.octicon-arrow-up
   text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
 
-.dependencies.partial .removeDependency
+.removeDependency
   width 20px
   height 20px
   
-.dependencies.partial .dependency a.article
+.dependency a.article
   font-size 19px
   
-.dependencies.partial .dependency a.dependencies
+.dependency a.dependencies
   font-family monospace
 
 a.deps
