--- a/public/views/templates/dependencies.jade
+++ b/public/views/templates/dependencies.jade
@@ -1,4 +1,4 @@
-script.template(type="x-tmpl-mustache")
+script.template.dependencies(type="x-tmpl-mustache")
   li
     | {{#dependencies}}
     .dependency
