A lot better register view

--- a/public/public/stylesheets/header.styl
+++ b/public/public/stylesheets/header.styl
@@ -21,4 +21,10 @@
   width 201px
 
 #rightHeader
-  margin-left 700px 
+  /* margin-left: 700px; */
+  float: right;
+  padding-right: 30px;
+  padding-top: 16px;
+
+button.login
+  margin-right 10px
