--- a/public/views/header/header.jade
+++ b/public/views/header/header.jade
@@ -1,7 +1,7 @@
 ﻿- var authenticated = false;
 
 #parentHeader.parentContainer
-  #childHeader.childContainer
+  #childHeader
     include header_common
     if user
       include header_logged
