--- a/public/views/register.jade
+++ b/public/views/register.jade
@@ -9,7 +9,7 @@ prepend scripts
     guiName = 'RegisterGui'
 
 block main
-  .form-outer
+  .rectangular-frame
     form.form-inner
       input.form-input#username(type="text" placeholder="username")
       input.form-input#password(type="password" placeholder="password")
