--- a/public/public/stylesheets/form.styl
+++ b/public/public/stylesheets/form.styl
@@ -7,17 +7,25 @@
   margin-top 30px
   
 .form-inner
-  padding 30px
+  padding 18px
 
 .form-input
   margin-bottom 8px
-  width 335px
-  height 16px
-  border-radius 3px
-  border 1px solid #A1A1A1
+  width 100%
+  height 25px
+  border 1px solid #ccc
+  border-radius 4px
   font-family 'Helvetica Neue', Helvetica, Arial, sans-serif
   padding 5px
   font-size 14.3999996185303px
+  -webkit-box-shadow inset 0 1px 1px rgba(0,0,0,.075)
+  box-shadow inset 0 1px 1px rgba(0,0,0,.075)
+
+.form-input:focus
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 
 .buttons
   margin-top 20px
