--- a/public/views/header/header_not_logged.jade
+++ b/public/views/header/header_not_logged.jade
@@ -1,3 +1,3 @@
 ﻿span#rightHeader
-  button(onclick="location.href='/login'") Log in
-  button(onclick="location.href='/register'") Register
+  button.login(onclick="location.href='/login'") Log in
+  button.register(onclick="location.href='/register'") Register
