--- a/public/views/login.jade
+++ b/public/views/login.jade
@@ -9,7 +9,7 @@ prepend scripts
     guiName = 'LogInGui'
 
 block main
-  .form-outer
+  .rectangular-frame
     form.form-inner
       input.form-input#username(type="text" placeholder="username")
       input.form-input#password(type="password" placeholder="password")
