--- a/public/views/register_finished.jade
+++ b/public/views/register_finished.jade
@@ -1,2 +1,5 @@
-﻿div El usuario se pudo registrar exitosamente... redireccionando a 
+﻿script.
+  setTimeout(function() {
+    location.href = '/'}, 5000);
+div We sent a confirmation email to your account, please confirm it...
   a(href="/login") Log in
