Add better login

--- a/public/views/header/header_logged.jade
+++ b/public/views/header/header_logged.jade
@@ -3,7 +3,7 @@
     headerName = 'LoggedHeaderGui'
 
 span#rightHeader
-  img#avatar(src="/images/avatar.png")
-  | #{user.username}
+  input#avatar(type="image")
+  a #{user.username}
   input#options(type="image", src="/images/wrench.png")
   button(onclick="location.href = '/logout'") Log out
