Remove unncesary 'a' on edit-user.jade

--- a/public/views/edit-user.jade
+++ b/public/views/edit-user.jade
@@ -1,5 +1,5 @@
 .partial.edit-user(style='display:none')
-  .main-left &nbsp; a
+  .main-left &nbsp;
   .main-center
     input.avatar(type='image')
     form#uploadForm(enctype='multipart/form-data', action='/api/photo', method='post')
