--- a/public/views/header/header_logged.jade
+++ b/public/views/header/header_logged.jade
@@ -1,6 +1,6 @@
 ﻿span#rightHeader
   a#avatar(type="image")
     img(src= user.avatar_url)
-  a #{user.username}
+  a.username #{user.username}
   input#options(type="image", src="/images/wrench.png")
   button(onclick="location.href = '/logout'") Log out
