Add avatars to index

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -4,10 +4,11 @@
   border-radius 3px
   border solid 1px #cfcfcf
   margin 5px
+  padding-top 9px
+  padding-left 9px
 
 .partial.index .title
   margin-left 10px
-  margin-top 5px
   font-size 2em
   font-weight bold
   display inline-block
