Better single page app system

--- a/public/views/single-page-app.jade
+++ b/public/views/single-page-app.jade
@@ -9,6 +9,7 @@ prepend scripts
       userId= !{JSON.stringify(user.id)};
 
 block main
+  .active
   include index
   include article
   include create_article
