Halfway commit of dependencies buttons working

--- a/public/views/templates/dependencies.jade
+++ b/public/views/templates/dependencies.jade
@@ -6,7 +6,7 @@ script.template.dependencies(type="x-tmpl-mustache")
       span.mega-octicon.octicon-star(style='{{starStyle}}')
       span.mega-octicon.octicon-star.empty(style='{{emptyStarStyle}}')
       | {{score}}
-      span.mega-octicon.octicon-arrow-up(style='{{arrowUpStyle}}')
+      span.mega-octicon.octicon-arrow-up.full(style='{{fullArrowUpStyle}}')
       span.mega-octicon.octicon-arrow-up.empty(style='{{emptyArrowUpStyle}}')
       img.avatar(src="{{user.avatar_url}}" href="{{user.id}}" title="{{user.username}}")
       a.article(href='{{article.url}}')  {{article.title}}
