Add score to the dependencies in the article

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -92,3 +92,10 @@
 
 a.deps
   font-family monospace
+
+.dependency .score
+  font-family monospace
+  display inline-block
+  width 50px
+  font-size 28px
+  text-align right
