--- a/public/views/article.jade
+++ b/public/views/article.jade
@@ -12,7 +12,7 @@
         a.dependencies Dependencies
       select.dependency(type="text" placeholder="Type words included in the title of the article you want to depend on...")
       button.add-dependency Add
-      ul.dependency.list
+      .dependency.list
       include templates/dependencies
     .changes.rectangular-frame
       h1.title Proposed changes
