Up scores working

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -72,6 +72,9 @@
 .mega-octicon.empty
   color white
   
+.mega-octicon.full
+  color rgb(243, 243, 0)
+  
 .octicon-star
   color rgb(255, 235, 122)
   text-shadow -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black
@@ -99,3 +102,6 @@ a.deps
   width 50px
   font-size 28px
   text-align right
+
+.dependency .octicon-arrow-up:hover, .dependency .octicon-star:hover
+  cursor: pointer
