--- a/public/views/templates/dependencies.jade
+++ b/public/views/templates/dependencies.jade
@@ -5,7 +5,7 @@ script.template.dependencies(type="x-tmpl-mustache")
     input.dependency-id(type='hidden' value='{{article.id}}')
     span.mega-octicon.octicon-arrow-up.full(style='{{fullArrowUpStyle}}')
     span.mega-octicon.octicon-arrow-up.empty(style='{{emptyArrowUpStyle}}')
-    span.mega-octicon.octicon-star(style='{{starStyle}}')
+    span.mega-octicon.octicon-star.full(style='{{starStyle}}')
     span.mega-octicon.octicon-star.empty(style='{{emptyStarStyle}}')
     img.avatar(src="{{user.avatar_url}}" href="{{user.id}}" title="{{user.username}}")
     a.article(href='{{article.url}}')  {{article.title}}
