--- a/public/public/stylesheets/header.styl
+++ b/public/public/stylesheets/header.styl
@@ -3,11 +3,11 @@
 
 #parentHeader
   background-color black
+  height 57px
 
 #childHeader
-  padding-top 13px
-  padding-bottom 10px
   color white
+  height 100%
 
 #search
   width 200px
@@ -19,6 +19,8 @@
 
 #logo
   width 201px
+  padding-left: 11px;
+  padding-top: 5px;
 
 #rightHeader
   /* margin-left: 700px; */
@@ -28,3 +30,26 @@
 
 button.login
   margin-right 10px
+  
+#what-is-this, #about-me
+  padding-left: 12px;
+  padding-right: 12px;
+  font-family: Optima, Segoe, 'Segoe UI', Candara, Calibri, Arial, sans-serif;
+  font-size: 33px;
+  font-style: normal;
+  font-variant: normal;
+  line-height: 62.883116px;
+  height: 100%;
+  
+#what-is-this:hover, #about-me:hover
+  background-color grey
+  
+#parentHeader a
+  color white
+  
+#childHeader > a
+  float left
+  display block
+  
+#childHeader a:first-of-type
+  margin-right 53px
