Even better header

--- a/public/public/stylesheets/header.styl
+++ b/public/public/stylesheets/header.styl
@@ -18,10 +18,11 @@
   border-radius 2px
 
 #logo
-  width 201px
+  width: 201px;
   padding-left: 11px;
-  padding-top: 5px;
-
+  padding-top: 7px;
+  transform: scale(0.8);
+  
 #rightHeader
   /* margin-left: 700px; */
   float: right;
@@ -32,13 +33,13 @@ button.login
   margin-right 10px
   
 #what-is-this, #about-me
-  padding-left: 12px;
-  padding-right: 12px;
+  padding-left: 16px;
+  padding-right: 17px;
   font-family: Optima, Segoe, 'Segoe UI', Candara, Calibri, Arial, sans-serif;
-  font-size: 20px;
+  font-size: 21px;
   font-style: normal;
   font-variant: normal;
-  line-height: 62.883116px;
+  line-height: 70.883116px;
   height: 100%;
   
 #what-is-this:hover, #about-me:hover
@@ -52,4 +53,4 @@ button.login
   display block
   
 #childHeader a:first-of-type
-  margin-right 53px
+  margin-right 41px
