Better css in index

--- a/public/public/stylesheets/article.styl
+++ b/public/public/stylesheets/article.styl
@@ -1,21 +1,24 @@
 ﻿.partial.index .article-thumb
-  height 80px
-  width 600px
-  border-radius 3px
-  border solid 1px #cfcfcf
-  margin 5px
-  padding-top 9px
-  padding-left 9px
+  height: 80px;
+  width: 600px;
+  border-radius: 3px;
+  border: solid 1px #cfcfcf;
+  margin: 5px;
+  padding-top: 13px;
+  padding-bottom: 5px;
+  padding-left: 16px;
 
 .partial.index .title
   margin-left 10px
   font-size 2em
   font-weight bold
   display inline-block
+  position: relative;
+  top: -6px;
 
 .partial.index .content
-  margin-left 20px
-  margin-top 3px
+  margin-left: 5px;
+  margin-top: 5px;
 
 .article-header .avatar
   margin-left 20px
