--- a/public/views/header/header_common.jade
+++ b/public/views/header/header_common.jade
@@ -1,4 +1,4 @@
 ﻿a(href="/")
   img#logo(src="/images/logo2.png", href="/")  
-a#what-is-this(href="/")  What is this? 
+a#what-is-this(href="/what-is-this")  What is this? 
 a#about-me(href="/") About me
