Mejor css para la descripcion

--- a/public/views/what-is-this.jade
+++ b/public/views/what-is-this.jade
@@ -10,23 +10,24 @@ prepend scripts
 block main
   .main-left &nbsp;
   .main-center 
-    h1 Que es Learneet?
-    p Learneet es un sitio colaborativo de artículos científicos.
+    #explanation
+      h1 Que es Learneet?
+      p Learneet es un sitio colaborativo de artículos científicos.
 
-    h1 Para qué sirve?
-    p Sirve para que cualquiera pueda aprender de la manera más rápida posible ideas o conceptos científicos de nivel académico, gratuitamente. 
+      h1 Para qué sirve?
+      p Sirve para que cualquiera pueda aprender de la manera más rápida posible ideas o conceptos científicos de nivel académico, gratuitamente. 
 
-    h1 No existen ya sitios así, como Wikipedia?
-    p Sí, y son geniales, pero no están hechos para aprender rápido conceptos científicos. A diferencia de Wikipedia, los artículos de Learneet deben ser cortos, y solo explicar una porción de un concepto o idea.
+      h1 No existen ya sitios así, como Wikipedia?
+      p Sí, y son geniales, pero no están hechos para aprender rápido conceptos científicos. A diferencia de Wikipedia, los artículos de Learneet deben ser cortos, y solo explicar una porción de un concepto o idea.
 
-    h1 Quién puede escribir artículos?
-    p Cualquiera que se haya registrado.
+      h1 Quién puede escribir artículos?
+      p Cualquiera que se haya registrado.
 
-    h1 Hay algun formato para escribir un artículo?
-    p Sí, los artículos deben explicar una idea o concepto singular de forma clara y precisa. Cualquiera debería poder entenderlo.
+      h1 Hay algun formato para escribir un artículo?
+      p Sí, los artículos deben explicar una idea o concepto singular de forma clara y precisa. Cualquiera debería poder entenderlo.
 
-    h1 Qué son las dependencias?
-    p Decimos que un artículo A depende de un artículo B cuando para entender el artículo A, primero tenés que entender el artículo B. 
+      h1 Qué son las dependencias?
+      p Decimos que un artículo A depende de un artículo B cuando para entender el artículo A, primero tenés que entender el artículo B. 
 
-    h1 Para qué sirven estas dependencias?
-    p Las dependencias nos permiten entender ideas más “complejas”. En Learneet creemos que no existen ideas difíciles de entender, sino que algunas ideas “complejas” dependen de conocer previamente otras ideas más simples.
+      h1 Para qué sirven estas dependencias?
+      p Las dependencias nos permiten entender ideas más “complejas”. En Learneet creemos que no existen ideas difíciles de entender, sino que algunas ideas “complejas” dependen de conocer previamente otras ideas más simples.
